# codegate

./: .dockerignore  .gitignore  NOTICE  README.md  main.py  pyproject.toml
backend/: .env.example  README.md  main.py  pyproject.toml
backend/docs/sdk_api/: README.md  javascript.md  python.md
backend/fixtures/: sample_codes.csv
backend/src/codegate/: __init__.py  config.py  database.py  main.py
backend/src/codegate/api/: api_keys.py  audit_logs.py  auth.py  codes.py  dashboard.py  docs.py  projects.py  verification_logs.py  verify.py
backend/src/codegate/api/sdk/: __init__.py  auth.py  routes.py
backend/src/codegate/core/: __init__.py  constants.py  exceptions.py
backend/src/codegate/jobs/: __init__.py  cleanup_expired_codes.py
backend/src/codegate/models/: __init__.py  admin.py  api_key.py  audit_log.py  invitation_code.py  project.py
backend/src/codegate/schemas/: api_key.py  audit_log.py  auth.py  project.py  verification_log.py
backend/src/codegate/services/: __init__.py
backend/src/codegate/services/api_key/: __init__.py  api_key_repository.py  api_key_service.py
backend/src/codegate/services/audit/: __init__.py  audit_repository.py  audit_service.py
backend/src/codegate/services/auth/: __init__.py  auth_repository.py  auth_service.py
backend/src/codegate/services/code/: code_repository.py  code_service.py
backend/src/codegate/services/project/: __init__.py  project_repository.py  project_service.py
backend/src/codegate/services/verification/: __init__.py  verification_repository.py  verification_service.py
backend/src/codegate/static/js/: components.js
backend/src/codegate/templates/: login.html
backend/src/codegate/templates/codes/: list.html
backend/src/codegate/templates/projects/: detail.html  list.html
backend/src/codegate/utils/: __init__.py  audit_log.py  code_generator.py  session_store.py  uuid_utils.py  validators.py
backend/tests/: __init__.py  conftest.py
backend/tests/api/: __init__.py
backend/tests/integration/: __init__.py  test_api_flow.py
backend/tests/models/: __init__.py
deploy/: .env.example  README.md  docker-compose.yml
deploy/backend/: Dockerfile
deploy/frontend/: Dockerfile
deploy/onebox/: Dockerfile  docker-compose.yml  supervisord.conf
docs/: check_list.md  todo_list.md
fixtures/: sample_projects.json
frontend/: .gitignore  README.md  next.config.ts  package.json  pnpm-lock.yaml
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/change-password/: page.tsx
frontend/app/docs/: page.tsx
frontend/app/login/: page.tsx
frontend/app/profile/: page.tsx
frontend/app/projects/: page.tsx
frontend/app/projects/[id]/: page.tsx
frontend/app/verify/: page.tsx
frontend/components/auth/: AuthGate.tsx
frontend/components/layout/: MainLayout.tsx  Sidebar.tsx
frontend/components/ui/: Modal.tsx  Toast.tsx  alert-dialog.tsx  badge.tsx  button.tsx  card.tsx  dialog.tsx  input.tsx  label.tsx  sonner.tsx  table.tsx  textarea.tsx
frontend/lib/: api.ts  utils.ts
frontend/libs/: api.ts
scripts/: .env.codegate.example  start.sh
sdk/: README.md
sdk/javascript/: README.md  package-lock.json  package.json  tsconfig.json  vitest.config.ts
sdk/javascript/examples/: basic_usage.ts  error_handling.ts
sdk/javascript/src/: client.ts  index.ts  signature.ts  types.ts
sdk/javascript/tests/: client.test.ts  signature.test.ts
sdk/python/: .gitignore  README.md  pyproject.toml
sdk/python/examples/: basic_usage.py  error_handling.py
sdk/python/src/codegate_sdk/: __init__.py  client.py  signature.py
sdk/python/tests/: test_signature.py
src/codegate/: config.py  database.py  main.py
src/codegate/api/: __init__.py  auth.py  codes.py  dashboard.py  projects.py  verify.py
src/codegate/core/: __init__.py  constants.py  enums.py  exceptions.py
src/codegate/jobs/: cleanup_expired_codes.py
src/codegate/models/: __init__.py  invitation_code.py  project.py  verification_log.py
src/codegate/schemas/: __init__.py  dashboard.py  invitation_code.py  project.py  utils.py  verification.py
src/codegate/services/code/: __init__.py  code_repository.py  code_service.py
src/codegate/services/project/: project_repository.py  project_service.py
src/codegate/services/verification/: verification_repository.py  verification_service.py
src/codegate/templates/: base.html  change_password.html  index.html  profile.html
src/codegate/utils/: __init__.py  code_generator.py  rate_limiter.py  validators.py
tests/integration/: test_api_flow.py
tests/models/: test_project.py
tests/services/: __init__.py
tests/utils/: __init__.py
(+6 files in other folders)
