[project]
name = "codegate"
version = "0.1.0"
description = "一个轻量级的 Python 服务，提供激活码/邀请码/验证码生成、过期、验证服务API。既可独立运行，也可嵌入其他系统。 A lightweight Python service that provides APIs for generating, expiring, and verifying invitation codes/verification codes. It can run independently or be embedded in other systems."
readme = "README.md"
requires-python = ">=3.12.9"
license = { text = "Apache-2.0" }
authors = [
  { name = "pfeak", email = "pfeak163@163.com" }
]
keywords = ["invitation", "code", "access", "verification"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.12",
  "Operating System :: OS Independent",
  "Topic :: Software Development :: Libraries",
]

dependencies = [
    "fastapi>=0.128.0",
    "uvicorn>=0.40.0",
    "sqlalchemy>=2.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "jinja2>=3.1.0",
    "python-multipart>=0.0.6",
    "filelock>=3.13.0",
    "typer>=0.9.0",
    "python-dotenv>=1.0.0",
    "bcrypt>=4.0.0",
]

[project.urls]
Homepage = "https://github.com/pfeak/codegate"
Repository = "https://github.com/pfeak/codegate"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/codegate"]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.2",
]
