[project]
name = "codegate-sdk"
version = "0.1.1"
description = "CodeGate Python SDK - 用于与 CodeGate API 进行交互的 Python 客户端库"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [
    { name = "pfeak", email = "pfeak163@163.com" }
]
keywords = ["codegate", "sdk", "api", "client", "invitation", "code", "verification"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "requests>=2.28.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/pfeak/codegate"
Repository = "https://github.com/pfeak/codegate"
Documentation = "https://github.com/pfeak/codegate/tree/main/sdk/python"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/codegate_sdk"]

[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312', 'py313', 'py314']

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[dependency-groups]
dev = [
    "build>=1.4.0",
    "pytest>=9.0.2",
    "twine>=6.2.0",
]
